--- a/src/dashboard/index.html
+++ b/src/dashboard/index.html
@@ -1,290 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vira Dashboard</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-</head>
-
-<body>
-    <div class="app">
-        <nav class="sidebar">
-            <div class="logo">
-                <span class="logo-icon">🧠</span>
-                <span class="logo-text">Vira</span>
-            </div>
-            <ul class="nav-menu">
-                <li class="nav-item active" data-tab="overview">
-                    <span class="nav-icon">📊</span>
-                    <span>Overview</span>
-                </li>
-                <li class="nav-item" data-tab="memories">
-                    <span class="nav-icon">💭</span>
-                    <span>Memories</span>
-                </li>
-                <li class="nav-item" data-tab="schedules">
-                    <span class="nav-icon">📅</span>
-                    <span>Schedules</span>
-                </li>
-                <li class="nav-item" data-tab="personas">
-                    <span class="nav-icon">🎭</span>
-                    <span>Personas</span>
-                </li>
-                <li class="nav-item" data-tab="entities">
-                    <span class="nav-icon">👤</span>
-                    <span>Entities</span>
-                </li>
-                <li class="nav-item" data-tab="triples">
-                    <span class="nav-icon">🔗</span>
-                    <span>Knowledge</span>
-                </li>
-                <li class="nav-item" data-tab="chat-logs">
-                    <span class="nav-icon">💬</span>
-                    <span>Chat Logs</span>
-                </li>
-                <li class="nav-item" data-tab="neural-events">
-                    <span class="nav-icon">⚡</span>
-                    <span>Neural Events</span>
-                </li>
-                <li class="nav-item" data-tab="settings">
-                    <span class="nav-icon">⚙️</span>
-                    <span>Settings</span>
-                </li>
-            </ul>
-            <div class="sidebar-footer">
-                <div class="status-indicator online"></div>
-                <span>System Online</span>
-            </div>
-        </nav>
-
-        <main class="main-content">
-            <header class="header">
-                <h1 id="page-title">Overview</h1>
-                <div class="header-actions">
-                    <button class="btn btn-icon" id="refresh-btn" title="Refresh">🔄</button>
-                    <div class="connection-status" id="connection-status">
-                        <span class="status-dot"></span>
-                        <span class="status-text">Connected</span>
-                    </div>
-                </div>
-            </header>
-
-            <div class="content-wrapper">
-                <section id="overview" class="tab-content active">
-                    <div class="stats-grid">
-                        <div class="stat-card">
-                            <div class="stat-icon">💭</div>
-                            <div class="stat-info">
-                                <span class="stat-value" id="stat-memories">--</span>
-                                <span class="stat-label">Memories</span>
-                            </div>
-                        </div>
-                        <div class="stat-card">
-                            <div class="stat-icon">📅</div>
-                            <div class="stat-info">
-                                <span class="stat-value" id="stat-schedules">--</span>
-                                <span class="stat-label">Schedules</span>
-                            </div>
-                        </div>
-                        <div class="stat-card">
-                            <div class="stat-icon">🎭</div>
-                            <div class="stat-info">
-                                <span class="stat-value" id="stat-personas">--</span>
-                                <span class="stat-label">Personas</span>
-                            </div>
-                        </div>
-                        <div class="stat-card">
-                            <div class="stat-icon">👤</div>
-                            <div class="stat-info">
-                                <span class="stat-value" id="stat-entities">--</span>
-                                <span class="stat-label">Entities</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="panel">
-                        <div class="panel-header">
-                            <h3>Recent Activity</h3>
-                        </div>
-                        <div class="panel-body" id="recent-activity">
-                            <p class="empty-state">Loading...</p>
-                        </div>
-                    </div>
-                </section>
-
-                <section id="memories" class="tab-content">
-                    <div class="toolbar">
-                        <input type="text" class="search-input" id="memory-search" placeholder="Search memories...">
-                        <button class="btn btn-primary" id="add-memory-btn">+ Add Memory</button>
-                    </div>
-                    <div class="data-table-container">
-                        <table class="data-table">
-                            <thead>
-                                <tr>
-                                    <th>Summary</th>
-                                    <th>Type</th>
-                                    <th>Confidence</th>
-                                    <th>Created</th>
-                                    <th>Actions</th>
-                                </tr>
-                            </thead>
-                            <tbody id="memories-list"></tbody>
-                        </table>
-                    </div>
-                </section>
-
-                <section id="schedules" class="tab-content">
-                    <div class="toolbar">
-                        <input type="text" class="search-input" id="schedule-search" placeholder="Search schedules...">
-                        <button class="btn btn-primary" id="add-schedule-btn">+ Add Schedule</button>
-                    </div>
-                    <div class="data-table-container">
-                        <table class="data-table">
-                            <thead>
-                                <tr>
-                                    <th>Context</th>
-                                    <th>Scheduled At</th>
-                                    <th>Status</th>
-                                    <th>Created</th>
-                                    <th>Actions</th>
-                                </tr>
-                            </thead>
-                            <tbody id="schedules-list"></tbody>
-                        </table>
-                    </div>
-                </section>
-
-                <section id="personas" class="tab-content">
-                    <div class="toolbar">
-                        <button class="btn btn-primary" id="add-persona-btn">+ Add Persona</button>
-                    </div>
-                    <div class="cards-grid" id="personas-list"></div>
-                </section>
-
-                <section id="entities" class="tab-content">
-                    <div class="toolbar">
-                        <input type="text" class="search-input" id="entity-search" placeholder="Search entities...">
-                    </div>
-                    <div class="data-table-container">
-                        <table class="data-table">
-                            <thead>
-                                <tr>
-                                    <th>Name</th>
-                                    <th>Type</th>
-                                    <th>Aliases</th>
-                                    <th>Mentions</th>
-                                    <th>Actions</th>
-                                </tr>
-                            </thead>
-                            <tbody id="entities-list"></tbody>
-                        </table>
-                    </div>
-                </section>
-
-                <section id="triples" class="tab-content">
-                    <div class="toolbar">
-                        <button class="btn btn-primary" id="add-triple-btn">+ Add Triple</button>
-                    </div>
-                    <div class="data-table-container">
-                        <table class="data-table">
-                            <thead>
-                                <tr>
-                                    <th>Subject</th>
-                                    <th>Predicate</th>
-                                    <th>Object</th>
-                                    <th>Confidence</th>
-                                    <th>Actions</th>
-                                </tr>
-                            </thead>
-                            <tbody id="triples-list"></tbody>
-                        </table>
-                    </div>
-                </section>
-
-                <section id="chat-logs" class="tab-content">
-                    <div class="toolbar">
-                        <button class="btn btn-secondary" id="clear-logs-btn">Clear All Logs</button>
-                    </div>
-                    <div class="chat-container" id="chat-logs-list"></div>
-                </section>
-
-                <section id="neural-events" class="tab-content">
-                    <div class="toolbar">
-                        <button class="btn btn-icon" id="refresh-events-btn">🔄</button>
-                    </div>
-                    <div class="data-table-container">
-                        <table class="data-table">
-                            <thead>
-                                <tr>
-                                    <th>Timestamp</th>
-                                    <th>Event Type</th>
-                                    <th>Component</th>
-                                    <th>Details</th>
-                                </tr>
-                            </thead>
-                            <tbody id="neural-events-list"></tbody>
-                        </table>
-                    </div>
-                </section>
-
-                <section id="settings" class="tab-content">
-                    <div class="settings-panel">
-                        <div class="settings-section">
-                            <h3>Global Context</h3>
-                            <textarea class="settings-textarea" id="global-context"
-                                placeholder="Enter global context..."></textarea>
-                            <button class="btn btn-primary" id="save-context-btn">Save Context</button>
-                        </div>
-
-                        <div class="settings-section">
-                            <h3>System Configuration</h3>
-                            <div class="form-group">
-                                <label>Temperature</label>
-                                <input type="range" id="temperature" min="0" max="1" step="0.1" value="0.7">
-                                <span class="range-value" id="temp-value">0.7</span>
-                            </div>
-                            <div class="form-group">
-                                <label>Max Output Tokens</label>
-                                <input type="number" id="max-tokens" value="512" min="64" max="4096">
-                            </div>
-                            <button class="btn btn-primary" id="save-config-btn">Save Configuration</button>
-                        </div>
-
-                        <div class="settings-section">
-                            <h3>Maintenance</h3>
-                            <div class="maintenance-actions">
-                                <button class="btn btn-secondary" id="trigger-maintenance-btn">Run Maintenance</button>
-                                <button class="btn btn-secondary" id="compress-memories-btn">Compress Memories</button>
-                                <button class="btn btn-secondary" id="optimize-graph-btn">Optimize Graph</button>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-            </div>
-        </main>
-    </div>
-
-    <div class="modal" id="modal">
-        <div class="modal-backdrop"></div>
-        <div class="modal-content">
-            <div class="modal-header">
-                <h2 id="modal-title">Modal Title</h2>
-                <button class="modal-close">&times;</button>
-            </div>
-            <div class="modal-body" id="modal-body"></div>
-            <div class="modal-footer">
-                <button class="btn btn-secondary modal-cancel">Cancel</button>
-                <button class="btn btn-primary modal-confirm">Confirm</button>
-            </div>
-        </div>
-    </div>
-
-    <div class="toast-container" id="toast-container"></div>
-
-    <script src="app.js"></script>
-</body>
-
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
